correctly update global 'droppedFiles' in the case of no archiving

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
   <h3>Uploader Events</h3>
   <div id="results"></div>
 
-<script type="text/javascript" src="../../src/browserplus.js"></script>
+<script type="text/javascript" src="http://bp.yahooapis.com/2.6.0/browserplus-min.js"></script>
 <!-- XXX: <script type="text/javascript" src="/static/js/temp_bp.js"></script> -->
 <script type="text/javascript" src="uploader.js"></script>  
 <script class="javascript">
